--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>howdy</h1>
+<center>
+<title>juicecomics</title>
+<br></br>
+<this is where i put all of my comics! go ahead and read them>
+
+</center>
