--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <center>
 <title>juicecomics</title>
 <br></br>
-<this is where i put all of my comics! go ahead and read them>
+<h1>this is where i put all of my comics! go ahead and read them</h1>
 
 </center>
